fixing word wrap on collection tree

--- a/web/src/main/webapp/css/tdar-base.css
+++ b/web/src/main/webapp/css/tdar-base.css
@@ -733,7 +733,7 @@ h2 {
 }
 
 #alt aside ul.collection-treeview a {
-    word-break: break-all;
+    overflow-wrap: break-word;
 }
 
 #alt aside ul.collection-treeview li {
